x.y.z
=====

Release date:

New features:

* Fix GitHub Issue #27: Implement undo/redo for note data

* Implement velocity key track
  - Set per-instrument in track settings (0-100%)
  - Linearly reduces velocity for higher notes

* Enable live recording on the current column

* Implement adjustable delay per note column

* Implement rate reduction for MIDI CC automations

Bug fixes:

* Fix track header not properly initialized when new pattern created

Other:

1.3.0
=====

Release date:

Wed, 31 Dec 2025 15:32:42 +0200

New features:

* Implement asynchronous loading and show a progress bar

* Implement individual delays for chord notes

* Make it possible to insert a new track also to the left

* Show pattern time / song time / total time on the tool bar

Bug fixes:

* Fix cursor activation on explicit song position change

Other:

* Optimize track creation

1.2.1
=====

Release date:

Sun, 28 Dec 2025 14:00:44 +0200

Bug fixes:

* Fix chord automation applied only on pattern 0

* Fix column muting not stopping active notes by implementing granular active note tracking

* Fix muting a track not immediately stop playing notes in PlayerWorker

* Fix timing inaccuracy in PlayerWorker by sleeping until next tick

* Fix column mute stopping all notes on track

*  Remove related settings from SideChainService when a track gets deleted

*  Don't try to apply side-chain on a non-existing track

Other:

* Implement keyboard handling logic in C++

* Performance improvements
  - Optimize PlayerWorker to sleep until next event or line boundary

1.2.0
=====

Release date:

Fri, 19 Dec 2025 19:57:49 +0200

New features:

* Implement Chord Automation
  - Adds Column Settings with Chord Automation section

* Fix GitHub Issue #30: Implement MIDI side-chain feature

Bug fixes:

* Fix Send transport checkbox not initialized

Other:

* Improve audio I/O with a ring buffer

* Improve MIDI timing with direct function calls to worker

1.1.0
=====

Release date:
