@@ -51,11 +51,12 @@ public:
     {
         float cycles = 0.f;
         float amplitude = 0.f;
+        float offset = 0.f;
         bool inverted = false;
 
         bool operator==(const ModulationParameters & other) const
         {
-            return cycles == other.cycles && amplitude == other.amplitude && inverted == other.inverted;
+            return cycles == other.cycles && amplitude == other.amplitude && offset == other.offset && inverted == other.inverted;
         }
 
         bool operator!=(const ModulationParameters & other) const
