@@ -266,7 +266,7 @@ void AutomationServiceTest::test_renderMidiCcToEventsByLine_withModulation_shoul
     quint8 value0 = 64;
     quint8 value1 = 64;
     const auto automationId = automationService.addMidiCcAutomation(pattern, track, column, controller, line0, line1, value0, value1, {}, true, 8, 0);
-    automationService.addMidiCcModulation(automationId, 1, 50.0f, false);
+    automationService.addMidiCcModulation(automationId, 1, 50.0f, 0.0f, false);
 
     const auto tick = 0;
     // Line 0: Base 64, Phase 0, Sine 0, Modulation 0
@@ -294,7 +294,7 @@ void AutomationServiceTest::test_renderMidiCcToEventsByLine_withInvertedModulati
     quint8 value0 = 64;
     quint8 value1 = 64;
     const auto automationId = automationService.addMidiCcAutomation(pattern, track, column, controller, line0, line1, value0, value1, {}, true, 8, 0);
-    automationService.addMidiCcModulation(automationId, 1, 50.0f, true);
+    automationService.addMidiCcModulation(automationId, 1, 50.0f, 0.0f, true);
 
     const auto tick = 0;
     // Line 0: Base 64, Phase 0, Sine 0, Modulation 0
@@ -307,6 +307,32 @@ void AutomationServiceTest::test_renderMidiCcToEventsByLine_withInvertedModulati
     QCOMPARE(automationService.renderToEventsByLine(pattern, track, column, 3, tick).at(0)->midiCcData()->value(), 96);
     // Line 4: Base 64, Phase 1, Sine 0, Modulation 0
     QCOMPARE(automationService.renderToEventsByLine(pattern, track, column, 4, tick).at(0)->midiCcData()->value(), 64);
+}
+
+void AutomationServiceTest::test_renderMidiCcToEventsByLine_withOffset_shouldRenderOffsetEvents()
+{
+    AutomationService automationService;
+
+    quint64 pattern = 0;
+    quint64 track = 1;
+    quint64 column = 2;
+    quint8 controller = 64;
+    quint8 line0 = 0;
+    quint8 line1 = 4;
+    quint8 value0 = 64;
+    quint8 value1 = 64;
+    const auto automationId = automationService.addMidiCcAutomation(pattern, track, column, controller, line0, line1, value0, value1, {}, true, 8, 0);
+
+    // Test positive offset (+50%)
+    automationService.addMidiCcModulation(automationId, 0, 0.0f, 50.0f, false);
+    const auto tick = 0;
+    // 64 + 64 * 0.5 = 96
+    QCOMPARE(automationService.renderToEventsByLine(pattern, track, column, 0, tick).at(0)->midiCcData()->value(), 96);
+
+    // Test negative offset (-50%)
+    automationService.addMidiCcModulation(automationId, 0, 0.0f, -50.0f, false);
+    // 64 + 64 * -0.5 = 32
+    QCOMPARE(automationService.renderToEventsByLine(pattern, track, column, 0, tick).at(0)->midiCcData()->value(), 32);
 }
 
 void AutomationServiceTest::test_renderMidiCcToEventsByColumn_withEventsPerBeatAndLineOffset_shouldSkipEvents()
