@@ -41,6 +41,7 @@ private slots:
     void test_renderToEventsByLine_disableAutomation_shouldNotRenderEvents();
     void test_renderMidiCcToEventsByLine_withModulation_shouldRenderModulatedEvents();
     void test_renderMidiCcToEventsByLine_withInvertedModulation_shouldRenderModulatedEvents();
+    void test_renderMidiCcToEventsByLine_withOffset_shouldRenderOffsetEvents();
     void test_renderMidiCcToEventsByColumn_withEventsPerBeatAndLineOffset_shouldSkipEvents();
     void test_renderToEventsByColumn_shouldRenderToEvents();
     void test_renderToEventsByColumn_shouldPruneRepeatingEvents();
